--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 body {
   margin: 0 auto;
   width: 100%;
-  background: #1a1a1a;
+  background: #f2f2f2;
   color: white;
 }
 
 h1 {
+  color: black;
   font-family: 'Share Tech Mono', monospace;
   font-size: 3rem;
   text-align: center;
