--- a/src/WorldStats.css
+++ b/src/WorldStats.css
@@ -3,12 +3,13 @@
   background: -webkit-linear-gradient(to bottom, #004e92, #000428);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin: 1rem;
+  padding-bottom: 1.25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  border-style: solid;
+  border-style: none;
   border-radius: 10px;
 }
 
