--- a/src/WorldRecovered.css
+++ b/src/WorldRecovered.css
@@ -1,9 +1,10 @@
 .WorldRecovered {
-  background: white;
+  background: #f2f2f2;
   color: black;
   border-style: none;
   margin: 1rem;
   padding: 1rem;
-  width: 25vw;
+  height: 18vh;
+  width: 24vw;
   box-shadow: 10px 10px 5px rgba(0,0,0,0.75);
 }
