--- a/src/WorldRecovered.css
+++ b/src/WorldRecovered.css
@@ -4,7 +4,11 @@
   border-style: none;
   margin: 1rem;
   padding: 1rem;
-  height: 18vh;
-  width: 24vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 20vw;
   box-shadow: 10px 10px 5px rgba(0,0,0,0.75);
 }
