--- a/src/CountryStats.css
+++ b/src/CountryStats.css
@@ -1,4 +1,4 @@
-.CountryStatsContainer {
+.CountryStatsContainer {  
   background: #000428;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #2F333D, #000428);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #2F333D, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -6,6 +6,8 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
   text-align: center;
   border-style: none;
