--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html {
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+}
+
 body {
   background: #494F5C;
   color: #f2f2f2;
@@ -27,4 +33,22 @@ h3 {
 p {
   font-family: 'Roboto', sans-serif;
   font-size: 2rem;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    color: #f2f2f2;
+    font-family: 'Share Tech Mono', monospace;
+    font-size: 2.5rem;
+    text-align: center;
+    text-shadow: crimson 1px 0 10px;
+    text-transform: uppercase;
+  }
+  
+  h2 {
+    font-family: 'Share Tech Mono', monospace;
+    font-size: 2rem;
+    text-align: center;
+    text-transform: uppercase;
+  }
 }
