--- a/src/CountryGraph.css
+++ b/src/CountryGraph.css
@@ -1,9 +1,15 @@
 .CountryDataContainer {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+
+@media (max-width: 600px) {
+  .CountryDataContainer {
+    width: 100%;    
+  }
 }
